fix on background behind list: -don't use ::before on input index.html change: -insert div classe .header-list-wrapper

--- a/sass/scss/app/partials/1utils/_variables.scss
+++ b/sass/scss/app/partials/1utils/_variables.scss
@@ -50,6 +50,9 @@ $hamburger-radius: 1rem;
 $hamburger-before-top: calc(50% + $burger-pad-top - $burger-text - 0.3rem);
 $hamburger-after-bottom: calc(50% - $burger-text - 0.3rem);
 
+//list-wrapper
+$list-wrapper-min-height: 120px;
+
 //list
 $list-width: $fs-xs * 12;
 $list-heigth: $list-width;
@@ -57,4 +60,5 @@ $list-heigth: $list-width;
 
 // screen
 $screen-width-xs: 'min-width:200px';
+
 
